--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
+    "bcrypt": "^2.0.1",
+    "classnames": "^2.2.6",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-addons-pure-render-mixin": "^15.6.2",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-komposer": "^2.0.0"
   },
   "meteor": {
     "mainModule": {
